src/objects/BT_CO_ARMS_UpdateCustomerBatchFile__c.object
<CustomObject>
    <fields>
        <fullName>Address1__c</fullName>
        <label>Address1</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address2__c</fullName>
        <label>Address2</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address3__c</fullName>
        <label>Address3</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BlackList_Indicator__c</fullName>
        <label>Blacklist Indicator</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Blacklist_Colour_Code__c</fullName>
        <label>Blacklist Colour Code</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Blacklist_Reason__c</fullName>
        <label>Blacklist Reason</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Block_House_No__c</fullName>
        <label>Block House No</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Building_Secondary__c</fullName>
        <label>Building Secondary</label>
        <length>45</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Profile__c</fullName>
        <label>Business Profile</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCRID__c</fullName>
        <label>CCRID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CareOf_ATtentionTo_Party__c</fullName>
        <label>CareOf AttentionTo Party</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CareOf_AttentionTo_Indicator__c</fullName>
        <label>CareOf AttentionTo Indicator</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City_Zip__c</fullName>
        <label>City Zip</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContactNo_Email__c</fullName>
        <label>ContactNo Email</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Designation__c</fullName>
        <label>Contact Designation</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Extension__c</fullName>
        <label>Contact Extension</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Name__c</fullName>
        <label>Contact Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Type__c</fullName>
        <label>Contact Type</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Credit_Risk_Rating__c</fullName>
        <label>Credit Risk Rating</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Name1__c</fullName>
        <label>Customer Name1</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Name2__c</fullName>
        <label>Customer Name2</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Status__c</fullName>
        <label>Customer Status</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Floor_No__c</fullName>
        <label>Floor No</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GST_OutOfScope_Indicator__c</fullName>
        <label>GST OutOfScope Indicator</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID_Number__c</fullName>
        <label>ID Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID_Type__c</fullName>
        <label>ID Type</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PO_Box_No__c</fullName>
        <label>PO Box No</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Passport_CountryCode__c</fullName>
        <label>Passport CountryCode</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Postal_Code__c</fullName>
        <label>Postal Code</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RecordType__c</fullName>
        <label>RecordType</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ReferenceKey__c</fullName>
        <label>ReferenceKey</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SPH_Staff_Indicator__c</fullName>
        <label>SPH Staff Indicator</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sort_Order__c</fullName>
        <displayFormat>{000000000}</displayFormat>
        <label>Sort Order</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <defaultValue>&apos;new&apos;</defaultValue>
        <description>valid values: &apos;new&apos;, &apos;sent&apos;</description>
        <label>Status</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street__c</fullName>
        <label>Street</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UniqueKey__c</fullName>
        <label>UniqueKey</label>
        <length>26</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unit_No__c</fullName>
        <label>Unit No</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unlink_Customer__c</fullName>
        <label>Unlink Customer</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UpdateDate__c</fullName>
        <label>UpdateDate</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UpdateTime__c</fullName>
        <label>UpdateTime</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Update_ID__c</fullName>
        <label>Update ID</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <label>BT_CO_ARMS_UpdateCustomerBatchFile</label>
    <listViews>
        <fullName>Date_Filtered</fullName>
        <columns>NAME</columns>
        <columns>CCRID__c</columns>
        <columns>Customer_Name1__c</columns>
        <columns>Customer_Name2__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>11/12/2015 12:00 AM</value>
        </filters>
        <label>Date Filtered</label>
    </listViews>
    <nameField>
        <label>BT_CO_ARMS_ Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>BT_CO_ARMS_UpdateCustomerBatches</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>